src/objects/Program_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Cost_Current__c</fullName>
        <label>Application Cost Current</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Cost_High__c</fullName>
        <label>Application Cost High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Cost_Low__c</fullName>
        <label>Application Cost Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Cost__c</fullName>
        <label>Application Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <inlineHelpText>Description taken from the Applications detail page.</inlineHelpText>
        <label>Application Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Instructions__c</fullName>
        <inlineHelpText>Instructions taken from Applications detail page.</inlineHelpText>
        <label>Application Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Program Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description specific to the Application as used on this Program.</inlineHelpText>
        <label>Program Application Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <inlineHelpText>Instructions specific to the Application as used on this Program.</inlineHelpText>
        <label>Program Application Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PGA-{0000000000}</displayFormat>
        <label>Program Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_delete_if_Program_is_Reviewed</fullName>
        <active>false</active>
        <description>Cannot delete if Program is Reviewed &amp; Approved.</description>
        <errorConditionFormula>if(ISPICKVAL(Program__r.Reviewed_Approved__c, &quot;Yes&quot;), true, false)</errorConditionFormula>
        <errorMessage>Cannot delete this Program Application because the Program has been checked as Reviewed and Approved.</errorMessage>
    </validationRules>
</CustomObject>